<resources>
    <string name="save">Save</string>
    <string name="instructRecord">&#8226; Press the record button and then breathe into the microphone.</string>
    <string name="instructStop">&#8226; When done, click the stop button.</string>
    <string name="instructPlay">&#8226; To hear the recording press the play button.</string>
    <string name="instructSave">&#8226; If satisfied, click the Save button to save to the database</string>
    <string name="NO_reading">NO Reading</string>
    <string name="submit">Submit</string>
    <string name="record_wheezing">Record Wheezing</string>
    <string name="app_name">k-Health Asthma</string>
    <string name="main_activity">HealthcareMainActivity</string>
    <string name="observations">Readings</string>
    <string name="observations_NO">Node Reading</string>
    <string name="previous">Previous</string>
    <string name="observations_environmantal">Foobot Readings</string>
    <string name="observations_guide">To activate or deactivate senosors use settings</string>
    <string name="observations_connection_options_guide">First connect to the sensors using the settings to take the sensor readings</string>
    <string name="connection_options">Connection Options</string>
    <string name="connection_options_connect">Scan to connect</string>
    <string name="connection_options_reconnect">Reconnect</string>
    <string name="connection_options_disconnect">Disconnect</string>
    <string name="connection_options_reset">Reset</string>
    <string name="connection_options_unit_preferences">Unit Preferences</string>
    <string name="connection_options_help">Help</string>
    <string name="summary">Summary</string>
    <string name="rewards">Rewards</string>
    <string name="connection_options_next">Sensordrone Readings</string>
    <string name="help_connect">How to connect</string>
    <string name="Personal_Information">Personal Information</string>
    <string name="Settings">Settings</string>
    <string name="continuous">View Symptoms</string>
    <string name="personal">Enter Symptoms</string>
    <string name="medical">Medical</string>
    <string name="alert">Alerts</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="reading">Take Readings</string>
    <string name="local_service_started">Service Started!</string>
    <string name="local_service_stopped">Service Stopped!</string>
    <string name="local_service_label">Healthcare Service</string>
    <string name="local_service_disconnected">Service Disconnected</string>
    <string name="local_service_connected">Service Connected</string>
    <string name="oauth_name">Oauth</string>
    <string name="default_obs_text">Activity: Authenticating&#8230;\nHeartRate: connecting&#8230;\nInstant Speed: connecting&#8230;</string>
    <string name="display_name">k-Health Asthma</string>
    <string name="drag_prompt">Click a symptom to move it here.</string>
    <string name="chest_discomfort">q-elevated-activity-level</string>
    <string name="fatigue">q-elevated-pulse-rate</string>
    <string name="dizzy">q-resting-activity-level</string>
    <string name="rosy">Rosaria</string>
    <string name="symptoms">Symptoms</string>
    <string name="symptomSubmit">Run Reasoner</string>
    <string name="zephyr">Zephyr</string>
    <string name="fitbit">Activity</string>
    <string name="instant_speed">Instant Speed</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="weight">Weight</string>
    <string name="current_obs">Current Reading: </string>
    <string name="home">Home</string>
    <string name="test">Test</string>
    <string name="past">Past Readings</string>
    <string name="sensors">Sensors</string>
    <string name="menu_title">k-Healths Menu</string>
    <string name="add_triples">Add Triples to Ontology</string>
    <string name="questions">Dialog</string>
    <string name="reconnect">Reconnect to Zephyr</string>
    <string name="hxmDemoAppName">Zephyr HxM BT Demo by Pye Brook Company, Inc.</string>
    <string name="notConnected">Monitor not connected, please ensure device is on properly and connect.</string>
    <string name="btNotEnabled">Bluetooth not enabled.</string>
    <string name="connecting">Connecting. Please enter PIN "1234" when prompted.</string>
    <string name="connectedTo">connected: </string>
    <string name="initializing">initializing</string>
    <string name="nonePaired">No Zephyr HxM devices have been paired?</string>
    <string name="noBluetooth">No Bluetooth?</string>
    <string name="abstractions">Conditions</string>
    <string name="severe">Severe</string>
    <string name="active">Active</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit App</string>
    <string name="logOut">Log Out</string>
    <string name="HXM_SERVICE_MSG_STATE">MESSAGE_STATE_CHANGE: message from HxM service indicating that the state of the service has been updated, and may have changed</string>
    <string name="HXM_SERVICE_MSG_READ">HXM_SERVICE_MSG_READ: message from HxM service with data read from the device</string>
    <string name="HXM_SERVICE_MSG_DEVICE_NAME">HXM_SERVICE_MSG_DEVICE_NAME: message from HxM service indicating the name of the device that a connection is associated with</string>
    <string name="HXM_SERVICE_MSG_TOAST">HXM_SERVICE_MSG_TOAST: message from HxM service requesting a toast be shown to the user</string>
    <string name="HXM_SERVICE_RESTING">HXM_SERVICE_RESTING: HxM service is at rest</string>
    <string name="HXM_SERVICE_CONNECTING">HXM_SERIVICE_CONNECTING: HxM service is trying to connect to an HxM</string>
    <string name="HXM_SERVICE_CONNECTED">HXM_SERVICE_CONNECTED: HxM service is connected to a HxM</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_sensor_detail_activity_old">SensorDetailActivityOLD</string>
    <string name="title_activity_blood_dpressure_graph">BloodDPressureGraphActivity</string>
    <string name="title_activity_home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_activity__home">Home</string>
    <string name="title_activity_observations">Observations</string>
    <string name="title_activity_khelath_asthma_parent">KHelathAsthmaParent</string>
    <string name="title_activity_graph">GraphActivity</string>
    <string name="title_activity_preferences">PreferencesActivity</string>
    <string name="title_activity_connection_options">ConnectionOptions</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_custom_dialog">CustomDialog</string>
    <string name="title_activity_personal_information">PersonalInformation</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_questionnaire">Questionnaire</string>
    <string name="coughing_level">Coughing Level</string>
    <string name="rescue_inhaler">Times Rescue Inhaler Used</string>
    <string name="wake_from_sleep">Wake From Sleep</string>
    <string name="wheezing">Wheezing</string>
    <string name="activity_level">Activity Level</string>
    <string name="extra_comment">Extra Comments</string>
    <string name="questionnaire">Questionnaire</string>
    <string name="title_activity_record_wheezing">RecordWheezingActivity</string>
    <string name="title_activity_observation__node__no">Observation_NODE_NO</string>
    <string name="title_activity_observations__sensordrone">Observations_Sensordrone</string>
    <string name="sensor_drone_connect">Sensordrone Options</string>
    <string name="node_connect">Node Options</string>
    <string name="title_activity_connection_node_options">ConnectionNodeOptions</string>
    <string name="nitric_oxide">Nitric Oxide Reading</string>
    <string name="title_activity_data_graphs">DataGraphsActivity</string>
    <string name="no_graph">NO Observations</string>
    <string name="title_activity_graph_selection">GraphSelectionActivity</string>
    <string name="select_graph">Select Graph</string>
    <string name="co_graph">CO Observations</string>
    <string name="temp_graph">Temperature Observations</string>
    <string name="humidity_graph">Humidity Observations</string>
    <string name="past_observations">Past Observations</string>
    <string name="questionnaire_graphs">Questionnaire Answers</string>
    <string name="cough_graph">Wake With Cough?</string>
    <string name="sleep_graph">Use Inhaler At Night?</string>
    <string name="wheezing_graph">Wheezing Amount?</string>
    <string name="activity_graph">Activity Level Change?</string>
    <string name="inhaler_usage_graph">Inhaler Usage Daytime?</string>
    <string name="comments_display">Extra Comments</string>
    <string name="analysis">Analysis</string>
    <string name="title_activity_analytics">AnalyticsActivity</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="run_analysis">Run Analysis</string>
    <string name="run_correlation">Run Correlation</string>
    <string name="title_activity_questionnaire_graph">QuestionnaireGraphActivity</string>
    <string name="title_activity_questionnaire_graph_selection">QuestionnaireGraphSelection</string>
    <string name="title_activity_comments_display">CommentsDisplay</string>
    <string name="title_activity_create_user">Create User</string>
    <string name="createUser">Create User</string>
    <string name="name">Name</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="zipCode">Zip Code</string>
    <string name="otherZipCode">Other Zip Code</string>
    <string name="medications">Medications</string>
    <string name="shortActingBroncodilators">Short Acting Bronchodilators</string>
    <string name="cb1">Albuterol</string>
    <string name="cb2">Ventolin</string>
    <string name="cb3">Proair</string>
    <string name="cb4">Xoponex</string>
    <string name="cb5">Atrovent</string>
    <string name="cb6">Combivent</string>
    <string name="cb7">Duoneb</string>
    <string name="longActingBroncodilators">Long Acting Bronchodilators</string>
    <string name="check1">Dulera</string>
    <string name="check2">Symbicort</string>
    <string name="check3">Advair</string>
    <string name="asthmaRelatedCough">Has your child had wheeze, chest tightness, or asthma related cough today?</string>
    <string name="coughWheezingNight">Did you/your child wake up with cough or wheezing?</string>
    <string name="takeAlbuterolNight">Did you/your child take albuterol due to cough or wheeze during the night?</string>
    <string name="takeAlbuterolDay">How many times did you/your child take albuterol inhaler today because of asthma symptoms (Not including before exercise)</string>
    <string name="nightQuestions">Night Questions</string>
    <string name="dayQuestion">Day Questions</string>
    <string name="nextQuestion">Next Question</string>
    <string name="yesCheck">Yes</string>
    <string name="noCheck">No</string>
    <string name="previousQuestion">Previous Question</string>
    <string name="howOften">How often: </string>
    <string name="PopulaitonSignalsGraphs">Outdoor Conditions</string>
    <string name="pollen_level">Pollen Level</string>
    <string name="air_quality_index">Air Quality Index</string>
    <string name="outdoor_temperature">Outdoor Temperature</string>
    <string name="outdoor_humidity">Outdoor Humidity</string>
    <string name="getBatteryLevel">Get Battery Level</string>
    <string name="currentSymptoms">Current Symptoms</string>
    <string name="title_activity_spirometry">Spirometry Collection</string>
    <string name="label_fev">FEV1 Reading:</string>
    <string name="spirometry_hint">e.g. 3.11</string>
</resources>