<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFFFF"
    android:orientation="vertical" >

    <RelativeLayout
        style="@style/TitleLayout"
        android:layout_width="match_parent" >

        <Button
            android:id="@+id/home_button"
            style="@style/home_button" />

        <TextView
            style="@style/TitleTextView"
            android:text="@string/questionnaire_graphs" />

        <Button
            android:id="@+id/menu_button"
            style="@style/DropDownMenuButton" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/cough_graph"
                style="@style/SaveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:drawableRight="@drawable/ic_next_item"
                android:gravity="left"
                android:text="@string/cough_graph" >
            </Button>

            <Button
                android:id="@+id/sleep_graph"
                style="@style/SaveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:drawableRight="@drawable/ic_next_item"
                android:gravity="left"
                android:text="@string/sleep_graph" >
            </Button>

            <Button
                android:id="@+id/wheezing_graph"
                style="@style/SaveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:drawableRight="@drawable/ic_next_item"
                android:gravity="left"
                android:text="@string/wheezing_graph" >
            </Button>

            <Button
                android:id="@+id/activity_graph"
                style="@style/SaveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:drawableRight="@drawable/ic_next_item"
                android:gravity="left"
                android:text="@string/activity_graph" >
            </Button>

            <Button
                android:id="@+id/inhaler_usage_graph"
                style="@style/SaveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:drawableRight="@drawable/ic_next_item"
                android:gravity="left"
                android:text="@string/inhaler_usage_graph" >
            </Button>

            <Button
                android:id="@+id/comments_display"
                style="@style/SaveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:drawableRight="@drawable/ic_next_item"
                android:gravity="left"
                android:text="@string/comments_display" >
            </Button>
        </LinearLayout>
    </ScrollView>

</LinearLayout>