<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFFFF"
    android:orientation="vertical" >

    <RelativeLayout
        style="@style/TitleLayout"
        android:layout_width="match_parent" >

        <Button
            android:id="@+id/home_button"
            style="@style/home_button" />

        <TextView
            style="@style/TitleTextView"
            android:text="@string/PopulaitonSignalsGraphs" />

        <Button
            android:id="@+id/menu_button"
            style="@style/DropDownMenuButton" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/pollen_level_graph"
            style="@style/SaveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:drawableRight="@drawable/ic_next_item"
            android:gravity="left"
            android:text="@string/pollen_level" >
        </Button>

        <Button
            android:id="@+id/air_quality_index_graph"
            style="@style/SaveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:drawableRight="@drawable/ic_next_item"
            android:gravity="left"
            android:text="@string/air_quality_index" >
        </Button>

        <Button
            android:id="@+id/outdoor_temperature_graph"
            style="@style/SaveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:drawableRight="@drawable/ic_next_item"
            android:gravity="left"
            android:text="@string/outdoor_temperature" >
        </Button>
        <Button
            android:id="@+id/outdoor_humidity_graph"
            style="@style/SaveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:drawableRight="@drawable/ic_next_item"
            android:gravity="left"
            android:text="@string/outdoor_humidity" >
        </Button>
    </LinearLayout>
	
</LinearLayout>
