<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".AlarmSetupActivity" >

    <RelativeLayout style="@style/TitleLayout" >

        <Button
            android:id="@+id/home_button"
            style="@style/home_button" />

        <TextView
            style="@style/TitleTextView"
            android:text="@string/dayQuestion" />

        <Button
            android:id="@+id/menu_button"
            style="@style/DropDownMenuButton" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_medium"
        android:layout_marginRight="@dimen/padding_medium"
        android:layout_marginTop="@dimen/padding_medium"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/FirstQues1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/asthmaRelatedCough"
            android:textColor="@color/blue_text"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_background"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/yesterday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yesCheck"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/today"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/noCheck"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
        
        <TextView
            android:id="@+id/howOften"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:text="@string/howOften"
            android:textColor="@color/blue_text"
            android:textSize="25sp"
            android:visibility="gone" />

        <Spinner
            android:id="@+id/tightnessDaySpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:visibility="gone" >

            <requestFocus />
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_medium"
        android:layout_marginRight="@dimen/padding_medium"
        android:layout_marginTop="30dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/submitNQ"
            style="@style/SaveButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_next_item"
            android:text="@string/nextQuestion" />

        <Button
            android:id="@+id/previousQuestion"
            style="@style/SaveButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_previous"
            android:text="@string/previousQuestion" />
    </LinearLayout>

</LinearLayout>